Closed
Bug 219058
Opened 22 years ago
Closed 22 years ago
styles applied to trees do not take effect with nightly builds.
Categories
(Core :: CSS Parsing and Computation, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: cmcauley, Assigned: dbaron)
References
()
Details
(Keywords: fixed1.5, regression, Whiteboard: [patch])
Attachments
(2 files)
|
1.73 KB,
image/gif
|
Details | |
|
1.46 KB,
patch
|
bzbarsky
:
review+
bzbarsky
:
superreview+
asa
:
approval1.5+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.5b) Gecko/20030911 Firebird/0.6.1+
Build Identifier: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.5b) Gecko/20030911 Firebird/0.6.1+
In the page http://www.lemure.net/~chuck/treeStyleBug/animals.xul I have hacked
the xulplanet.com tutorial on trees with rdf sources to demonstrate a style
problem with the latest firebird release.
The tree cells and rows should have the styles applied to them specified in
http://www.lemure.net/~chuck/treeStyleBug/thisstyle.css, but they do not take
effect in the latest build of Firebird. Mozilla (of various releases and
nightlies) does not seem to have this problem, nor does the latest 0.6.1 release
of Firebird.
Reproducible: Always
Steps to Reproduce:
1.Visit website at http://www.lemure.net/~chuck/treeStyleBug/animals.xul with
FireBird release 0.6.1
2.Visit the same website with latest build of firebird. Notice the styles no
longer apply to the tree.
Actual Results:
Styles do not apply to tree anymore (ie, looks like a tree with default style).
Expected Results:
Displayed the treerows as blue with bold, line-through, and justify attributes
to the text with the treecells.
I see this too in winXP Gecko/20030910 Firebird/0.6.1+
OS -> all
added keyword: regression
As displayed by Gecko/20030728 Firebird 0.6.1 milestone.
(For those who don't have an old version of Firebird installed).
moving to Browser -> Style System
Assignee: blake → dbaron
Component: General → Style System
Product: Firebird → Browser
QA Contact: asa → ian
Version: unspecified → Other Branch
| Assignee | ||
Comment 4•22 years ago
|
||
It works now if you use two colons for the pseudo-element.
I'm wondering if we should go back to supporting the single-colon form for
these, and perhaps others...
| Assignee | ||
Updated•22 years ago
|
Flags: blocking1.5?
| Assignee | ||
Comment 5•22 years ago
|
||
| Assignee | ||
Updated•22 years ago
|
Attachment #131787 -
Flags: superreview?(bz-vacation)
Attachment #131787 -
Flags: review?(bz-vacation)
| Assignee | ||
Updated•22 years ago
|
Status: NEW → ASSIGNED
Whiteboard: [patch]
| Assignee | ||
Updated•22 years ago
|
Attachment #131787 -
Flags: approval1.5?
Comment 6•22 years ago
|
||
(if we do this the comment above the if statement should be fixed too)
Comment 7•22 years ago
|
||
Comment on attachment 131787 [details] [diff] [review]
accept the old form, but produce the :: form on output
r+sr=me if the comment is updated.... I guess this is OK and makes us more
backwards-compatible.
Attachment #131787 -
Flags: superreview?(bz-vacation)
Attachment #131787 -
Flags: superreview+
Attachment #131787 -
Flags: review?(bz-vacation)
Attachment #131787 -
Flags: review+
| Assignee | ||
Comment 8•22 years ago
|
||
Fix checked in to trunk, 2003-09-20 22:21 -0700.
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Comment 9•22 years ago
|
||
Comment on attachment 131787 [details] [diff] [review]
accept the old form, but produce the :: form on output
a=asa (on behalf of drivers) for checkin to the Mozilla 1.5 branch. Please add
the fixed1.5 keyword when this is landed on the branch. Thanks.
Attachment #131787 -
Flags: approval1.5? → approval1.5+
| Assignee | ||
Comment 10•22 years ago
|
||
Fix checked in to MOZILLA_1_5_BRANCH, 2003-09-22 15:18 -0700.
Keywords: fixed1.5
Updated•22 years ago
|
Flags: blocking1.5?
You need to log in
before you can comment on or make changes to this bug.
Description
•