Accept :-moz-tree-* pseudo elements with a single colon in them.  b=219058  r+sr=bzbarsky